--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.79.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
